--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "The application powering mattgoucher.com",
   "main": "index.js",
   "scripts": {
-    "prestart": "babel app --out-dir lib && webpack --config webpack.config.babel.js -p --optimze-dedupe",
-    "start": "node index"
+    "Xprestart": "babel app --out-dir lib && webpack --config webpack.config.babel.js -p --optimze-dedupe",
+    "start": "node index",
+    "predev": "npm run prestart",
+    "dev": "NODE_ENV=development nodemon ./index.js"
   },
   "engines": {
     "node": "4.2.4"
@@ -41,14 +43,13 @@
     "jade": "^1.11.0",
     "morgan": "^1.6.1"
   },
-  "devDepdendencies": {
-    "webpack": "^1.12.15"
-  },
   "devDependencies": {
+    "webpack": "^1.12.15",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "nodemon": "^1.9.1"
   }
 }
