--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "The application powering mattgoucher.com",
   "main": "index.js",
   "scripts": {
-    "xprestart": "babel app --out-dir lib && webpack --config webpack.config.babel.js -p --optimze-dedupe",
-    "prestart": "echo 'prestart' disabled..",
-    "start": "node index",
-    "predev": "npm run prestart",
+    "prestart": "gulp",
+    "start": "NODE_ENV=production node index",
+
+    "predev": "gulp",
     "dev": "NODE_ENV=development nodemon ./index.js"
   },
   "engines": {
@@ -45,12 +45,20 @@
     "morgan": "^1.6.1"
   },
   "devDependencies": {
-    "webpack": "^1.12.15",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
-    "nodemon": "^1.9.1"
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.5.3",
+    "nodemon": "^1.9.1",
+    "webpack": "^1.12.15"
   }
 }
