--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prestart": "gulp",
     "start": "NODE_ENV=production node index",
     "predev": "gulp",
-    "dev": "NODE_ENV=development nodemon ./index.js"
+    "dev": "NODE_ENV=development nodemon ./index.js",
+    "test": "mocha test/**/*.spec.js"
   },
   "engines": {
     "node": "4.2.4"
@@ -33,7 +34,8 @@
     "express": "^4.13.4",
     "helmet": "^1.1.0",
     "jade": "^1.11.0",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "request": "^2.71.0"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
@@ -49,6 +51,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "mocha": "^2.4.5",
     "nodemon": "^1.9.1",
     "webpack": "^1.12.15"
   }
