--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production node index",
     "predev": "gulp",
     "dev": "NODE_ENV=development nodemon ./index.js",
-    "test": "mocha test/**/*.spec.js"
+    "test": "mocha test/**/*.spec.js --require test/setup.js"
   },
   "engines": {
     "node": "4.2.4"
@@ -43,6 +43,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
