--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "helmet": "^1.1.0",
     "jade": "^1.11.0",
     "morgan": "^1.6.1",
-    "request": "^2.71.0"
-  },
-  "devDependencies": {
+    "request": "^2.71.0",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
+  },
+  "devDependencies": {
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
