--- a/package.json
+++ b/package.json
@@ -41,9 +41,7 @@
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0"
-  },
-  "devDependencies": {
+    "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
