--- a/package.json
+++ b/package.json
@@ -28,21 +28,18 @@
   },
   "homepage": "https://github.com/mattgoucher/fuckbeards",
   "dependencies": {
-    "body-parser": "^1.15.0",
-    "compression": "^1.6.1",
-    "cookie-parser": "^1.4.1",
-    "csurf": "^1.8.3",
-    "express": "^4.13.4",
-    "helmet": "^1.1.0",
-    "jade": "^1.11.0",
-    "morgan": "^1.6.1",
-    "request": "^2.71.0",
+    "babel": "^6.5.2",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
+    "body-parser": "^1.15.0",
     "chai": "^3.5.0",
+    "compression": "^1.6.1",
+    "cookie-parser": "^1.4.1",
+    "csurf": "^1.8.3",
+    "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
@@ -51,8 +48,12 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "helmet": "^1.1.0",
+    "jade": "^1.11.0",
     "mocha": "^2.4.5",
+    "morgan": "^1.6.1",
     "nodemon": "^1.9.1",
+    "request": "^2.71.0",
     "webpack": "^1.12.15"
   }
 }
