--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mattgoucher/fuckbeards.git"
+    "url": "https://github.com/mattgoucher/mattgoucher.com.git"
   },
   "author": {
     "name": "Matt Goucher",
@@ -24,9 +24,9 @@
   },
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mattgoucher/fuckbeards/issues"
+    "url": "https://github.com/mattgoucher/mattgoucher.com/issues"
   },
-  "homepage": "https://github.com/mattgoucher/fuckbeards",
+  "homepage": "https://github.com/mattgoucher/mattgoucher.com",
   "dependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.7.5",
@@ -42,6 +42,7 @@
     "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.1.0",
