--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node index",
     "predev": "gulp",
     "dev": "NODE_ENV=development nodemon ./index.js",
+    "pretest": "eslint --ext .js --env browser,node app",
     "test": "mocha test/**/*.spec.js --require test/setup.js"
   },
   "engines": {
@@ -31,7 +32,9 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
+    "babel-eslint": "^5.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.0",
@@ -39,6 +42,7 @@
     "compression": "^1.6.1",
     "cookie-parser": "^1.4.1",
     "csurf": "^1.8.3",
+    "eslint": "^1.10.3",
     "express": "^4.13.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
