--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "morgan": "^1.6.1",
     "nodemon": "^1.9.1",
     "request": "^2.71.0",
+    "standard-version": "^2.2.1",
     "webpack": "^1.12.15"
   }
 }
